tests/invalid/invalid_child_constraints_reference_parent.csl
config InvalidScope {
  log_level: "debug" | "info";
  logger: {
    format: string;
    constraints {
      conflicts format with log_level;
    };
  };
}
